test/integration/good/tuples/tuple-constraints-params.stan
parameters {
  tuple(real<lower=0>, real<lower=0>) ps;
}
