test/integration/bad/new/transformations-bad2.stan
data { vector<lower=T, upper=T,> x;}